testsuite/tests/warnings/should_fail/WarningGroups.hs
{-# OPTIONS_GHC -Wwarn=everything -fwarn-all -fno-warn-compat -Werror=unused-binds #-}
module WarningGroups () where

unused = let useless = () in ()
